<resources>
    <string name="app_name">ShaurmaApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about_us">О заведении</string>
    <string name="title_menu">Каталог</string>
    <string name="title_order">Заказ</string>
    <string name="title_profile">Кабинет</string>
    <string name="title_profile_user_data">Мои данные</string>
    <string name="title_profile_addresses">Мои адреса</string>
    <string name="title_profile_orders">Мои заказы</string>
    <string name="title_profile_payments">Мои способы оплаты</string>
</resources>