<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.shaurmaapp.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.shaurmaapp.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.shaurmaapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_about_us"
        android:name="com.example.shaurmaapp.ui.about_us.AboutUsFragment"
        android:label="@string/title_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/navigation_profile_user_data"
        android:name="com.example.shaurmaapp.ui.profile.user_data.ProfileUserDataFragment"
        android:label="@string/title_profile_user_data"
        tools:layout="@layout/fragment_profile_user_data" />

    <fragment
        android:id="@+id/navigation_profile_addresses"
        android:name="com.example.shaurmaapp.ui.profile.addresses.ProfileAddressesFragment"
        android:label="@string/title_profile_addresses"
        tools:layout="@layout/fragment_profile_addresses" />

    <fragment
        android:id="@+id/navigation_profile_orders"
        android:name="com.example.shaurmaapp.ui.profile.orders.ProfileOrdersFragment"
        android:label="@string/title_profile_orders"
        tools:layout="@layout/fragment_profile_orders" />

    <fragment
        android:id="@+id/navigation_profile_payments"
        android:name="com.example.shaurmaapp.ui.profile.payments.ProfilePaymentsFragment"
        android:label="@string/title_profile_payments"
        tools:layout="@layout/fragment_profile_payments" />

</navigation>